docs(index):优化页面标题描述- 删除重复的“高质量”表述- 保持标题简洁准确- 提升SEO友好性

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>60s-api 高质量高质量、开源、可靠的新闻聚合API集合</title>
+    <title>60s-api 高质量、开源、可靠的新闻聚合API集合</title>
   </head>
   <body>
     <div id="root"></div>
